services/educs/mongo/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: mongo
spec:
  strategy:
    type: Recreate
  template:
    spec:
      terminationGracePeriodSeconds: 10
      volumes:
      - name: "mongo-persistent-storage"
        persistentVolumeClaim: 
          claimName: "mongo-pvc"
      containers:
      - name: mongo
        image: arm64v8/mongo
        resources: {}
        # envFrom:
        # - secretRef:
        #     name: mongo-secrets
        ports:
        - containerPort: 27017
          name: mongo
        volumeMounts:
        - name: mongo-persistent-storage
          mountPath: /data/db
