services/educs/mongo/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  ipFamilyPolicy: SingleStack
  type: ClusterIP
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
    name: mongo
